--- a/style.css
+++ b/style.css
@@ -1,5 +1,51 @@
 body {
+    height: 100%;
+    border: 1px solid black;
+    font-family: 'arial';
+}
+
+h5 {
+    font-family: OCRA;
+}
+
+div {
+    /* border: 1px dotted black; */
+}
+
+a {
+    margin-top: 0;
+    text-decoration: none;
+}
+
+.titleName, .titleDev {
+    margin: 0;
+}
+
+.header {
+    background: linear-gradient(rgb(5, 24, 63),rgb(143, 153, 243));
     display: grid;
-    background: linear-gradient(#E2EBE8,#F7F9F8);
-    height: 100vh;
+    grid-template-rows: 100vh;
+    grid-template-columns: 100%;
+    grid-area: 1 / 1 / span 1 / span 1;
+    align-items: center;
+    text-align: center;
+    color: ghostwhite;
+    font-size: 2em;
+}
+
+#infiniteLoopAlternate {
+    display: grid;
+    grid-template: 10vh / 100%;
+}
+
+.wave {
+    grid-area: 1 / 1 / span 1 / span 1;
+    background-color: #A8D2D4
+}
+
+.allProjects {
+    background: linear-gradient(#A8D2D4,#499C82);
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-template-rows: repeat(3, 52.5vh);
 }
