--- a/style.css
+++ b/style.css
@@ -76,10 +76,13 @@ a {
     grid-area: 2 / 1 / span 1 / span 1;
     height: 14em;
     margin: 0 auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 5px solid white;
+    border-radius: 4px;
 }
 
 .p1Title h5, .p2Title h5, .p3Title h5 {
-    font-size: 6em;
+    font-size: 5em;
 }
 
 .p1Title, .p2Title, .p3Title {
@@ -90,12 +93,39 @@ a {
     grid-area: 4 / 1 / span 1 / span 1;
 }
 
+/* .btn {
+    background-color: red;
+} */
+
+.pBtn1 {
+    margin-right: 1vw
+}
+
+.pBtn2 {
+    margin-left: 1vw;
+}
+
 #infiniteLoopAlternate {
     display: grid;
-    grid-template: 12vh / 100%;
+    grid-template: 8vh / 100%;
 }
 
 .wave {
     grid-area: 1 / 1 / span 1 / span 4;
-    background-color:#264968
+}
+
+.firstWave {
+    background-color: #63b6ff
+}
+
+.secondWave {
+    background-color: #4177a7
+}
+
+.thirdWave {
+    background-color: #66ace9
+}
+
+.fourthWave {
+    background-color: #3275af
 }
