--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body {
-    background: linear-gradient(#0A0809, #4DA7F8);
-    font-family: 'arial';
+    background: linear-gradient(rgb(19, 19, 24), rgb(20, 90, 151));
+    font-weight: 700;
     margin: 0;
+}
+
+.titleName {
+    font-family: 'Sacramento', cursive;
+    margin-bottom: 0;
 }
 
 /* div {
@@ -19,6 +24,7 @@ h1, h5, p {
 .titleDev {
     font-family: OCRA;
     font-size: 1.3em;
+    margin-top: 0;
 }
 
 a {
