--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     background: linear-gradient(rgb(19, 19, 24), rgb(20, 90, 151));
     font-weight: 700;
     margin: 0;
+    font-family: 'Enriqueta', serif;
+
 }
 
 .titleName {
@@ -38,7 +40,7 @@ a {
 .title {
     margin: 0;
     display: grid;
-    grid-template: repeat(4, 25vh) / 100%;
+    grid-template: repeat(3, 25vh) repeat(2, 12.5vh) / 100%;
     text-align: center;
     align-items: center;
 }
@@ -48,8 +50,9 @@ a {
 }
 
 .title p {
-    grid-area: 4 / 1 / span 1 / span 1;
+    grid-area: 5 / 1 / span 1 / span 1;
     font-size: 1.2em;
+
 }
 
 .projectList {
